--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   },
   "version": "0.0.1",
   "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-sass": "^0.7.1",
-    "gulp-connect": "^2.0.5",
-    "gulp-usemin": "^0.3.3",
-    "gulp-minify-html": "^0.1.3",
+    "gulp": "^3.8.7",
+    "gulp-connect": "^2.0.6",
     "gulp-minify-css": "^0.3.4",
+    "gulp-minify-html": "^0.1.3",
     "gulp-rev": "^0.3.2",
+    "gulp-rimraf": "^0.1.0",
+    "gulp-sass": "^0.7.1",
     "gulp-uglify": "^0.3.0",
-    "gulp-clean": "^0.2.4"
+    "gulp-usemin": "^0.3.3"
   }
 }
